tests/snapshots/run_wpt_conformance__trtx_ceil_float16_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "ceil.https.any.js",
    "ceil float16 5D tensor",
    "trtx",
    "PASS",
)
